--- a/index.html
+++ b/index.html
@@ -62,130 +62,15 @@
 </header>
 
 <main>
-  <div class="ImgMycolor_first">
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./img/216A9855.jpg" class="d-block" alt="...">
-          <div class="carousel-caption ">
-            <h5>Первое заседание Молодежного парламента</h5>
-            <div class="d-none d-md-block">
-            <p>24 февраля в Законодательном Собрании стартовал новый молодёжный созыв</p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="./img/na-sajt.jpg" class="d-block" alt="...">
-          <div class="carousel-caption">
-            <h5>с Днем защитника Отечества</h5>
-           <div class="d-none d-md-block">
-            <p>Поздравляем с Днем защитника Отечества – праздником мужества, благородства и чести!</p>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="./img/vDRvpI-K5m4.jpg" class="d-block" alt="...">
-          <div class="carousel-caption">
-            <h5>«Молодёжь Севера» 2022</h5>
-            <div class="d-none d-md-block">
-            <p>Северный форум в Норильске в этом году вновь пройдет в апреле, и соберет активную молодежь со всего края!</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Назад</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Вперёд</span>
-      </button>
-    </div>
+  <div class="mainfoto">
   </div>
+  <!--<img src="./img/216A9855.jpg" class="mainfoto" alt="...">-->
     <div class="container">
-      <br>
-      <h1 class="text-center" >Новости</h1>
-      <hr>
-      <div class="row  justify-content-center align-items-center row-cols-3 g-4">
-        <div class="col cards">
-          <div class="card">
-            <img src="./img/1jJB3IHgDN8.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">СЕГОДНЯ ТВОЙ ДЕНЬ</h5>
-              <p class="card-text">Сегодня команда Молодежного парламента поздравляет с Днем Рождения Евгения Петрова, члена Молодежного парламента VII созыва! 🎂 </p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-outline-light">Подробнее</a>
-            </div>
-          </div>
-        </div>
-        <div class="col cards">
-          <div class="card">
-            <img src="./img/YKdnZwgOyQk.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">СЕГОДНЯ ТВОЙ ДЕНЬ </h5>
-              <p class="card-text">Сегодня команда Молодежного парламента поздравляет с Днем Рождения Екатерину Игнатьеву, члена Молодежного парламента VII созыва! 🎂</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-outline-light">Подробнее</a>
-            </div>
-          </div>
-        </div>
-        <div class="col cards">
-          <div class="card">
-            <img src="./img/FtNxBupVgfM.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">СЕГОДНЯ ТВОЙ ДЕНЬ</h5>
-              <p class="card-text">Сегодня команда Молодежного парламента поздравляет с Днем Рождения Никиту Лазарева, члена Молодежного парламента VII созыва! 🎂</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-outline-light">Подробнее</a>
-            </div>
-          </div>
-        </div>
+      <div class="maindiv text-center">
+        <p>Молодежный парламент Красноярского края - площадка для связи молодежи и власти. Транслируем интересы молодежи и рассказываем о важном для молодых людей.</p>
+        <p>Ты можешь обратиться со своим вопросом или проблемой, и здесь твоя инициатива может принять форму закона.</p>
+        <p>Мы - команда молодых людей, меняющих край </p>
       </div>
-      <div>
-        <a href="#" class="btn btn-outline-light my-3">Архив новостей</a>
-      </div>
-      <br>
-<h1 class="text-center" >Наша деятельность</h1>
-<hr>
-<div class="row row-cols-1 row-cols-md-1 g-4">
-  <div class="col">
-    <div class="MYcard">
-      <a href="./Team.html"><img src="./img/cristiano_gol_sevilla_n-1.jpg" class="card-img-top h-100" alt="...">
-      <div class="MYtext">
-        <h3>Состав</h3>
-          Действующий состав молодёжного парламента Красноярского края при Законодательном Собрании Красноярского края VII созыва
-      </div></a>
-    </div>
-  </div>
-  <div class="col">
-    <div class="MYcard">
-      <a href="https://vk.com/feed"><img src="./img/writing-wide-2.jpg" class="card-img-top h-100" alt="..."></a>
-      <div class="MYtext">
-        <h3>Инициативы</h3>
-        Законотворческие инициативы молодёжного парламента Красноярского края
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="MYcard">
-      <a href="https://vk.com/feed"><img src="./img/prueba2_19.jpg" class="card-img-top h-100" alt="..."></a>
-      <div class="MYtext">
-        <h3>Проекты</h3>
-        Проекты молодёжного парламента Красноярского края
-      </div>
-    </div>
-  </div>
-</div>
-<br>
 </div>
 <footer>
   <div class="container">
