--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
       <div class="maindiv text-center">
         <p>Молодежный парламент Красноярского края - площадка для связи молодежи и власти.</p>
         <p>Транслируем интересы молодежи и рассказываем о важном для молодых людей.</p>
-        <p>Ты можешь обратиться со своим вопросом или проблемой, и здесь твоя инициатива может принять форму закона.</p>
-        <p>Мы - команда молодых людей, меняющих край </p>
+        <p>Мы - команда молодых людей, меняющих край! </p>
       </div>
 </div>
 <footer>
