--- a/index.html
+++ b/index.html
@@ -29,31 +29,32 @@
   <body>
     
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark Mycolor">
+  <nav class="navbar navbar-expand-lg navbar-dark Mycolor fixed-top">
     <div class="container-fluid ">
-      <a class="navbar-brand" href="./index.html">Молодёжный парламент</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
+          <li class="nav-item">
+            <a class="nav-link My" href="./About.html">О нас</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link My" href="./Team.html">Состав</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link My" href="./Projects.html">Проекты</a>
+          </li>
+        </ul>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
           <li class="nav-item">
-            <a class="nav-link " href="./About.html">О нас</a>
+            <a class="nav-link My"  href="./Initiatives.html">Инициативы</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Team.html">Состав</a>
+            <a class="nav-link My"  href="./Сontest.html">Конкурс</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Projects.html">Проекты</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  href="./Initiatives.html">Инициативы</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  href="./Сontest.html">Конкурс</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  href="./Сontacts.html">Контакты</a>
+            <a class="nav-link My"  href="./Сontacts.html">Контакты</a>
           </li>
         </ul>
       </div>
@@ -62,18 +63,89 @@
 </header>
 
 <main>
-  <div class="mainfoto">
+  <!--<div class="mainfoto">
+    <img src="./img/main.jpg" class="mainfoto" alt="...">
+    <div class="mainfoto1">
+      <img src="./img/logo_mp_krasnoe.png" class="mainfoto1" alt="">
+    </div>
   </div>
-  <!--<img src="./img/216A9855.jpg" class="mainfoto" alt="...">-->
-    <div class="container">
-      <div class="maindiv text-center">
-        <p>Молодежный парламент Красноярского края - площадка для связи молодежи и власти.</p>
-        <p>Транслируем интересы молодежи и рассказываем о важном для молодых людей.</p>
-        <p>Мы - команда молодых людей, меняющих край! </p>
+  <div class="mainfoto1">
+    <img src="./img/logo_mp_krasnoe.png" class="mainfoto1" alt="">
+  </div>
+-->
+<div class="mainfoto_i">
+  <img src="./img/main.jpg" class="mainfoto" alt="">
+<div class="mainfoto1">
+  <img src="./img/logo_mp_beloe.png" class="mainfoto1" alt="">
+</div>
+</div>
+<div class="prosto"></div>
+<div class="container">
+  <div class="pblok text-center">
+    <div class="pblok1">
+      <h1 class="h1pblok">НОВОСТИ</h1>
+    </div>
+  </div>
+  <div class="row justify-content-center align-items-center">
+    <div class="fpblok text-center">
+      <div class="fpblok1">
+          <img src="./img/main.jpg" class="foto" alt="">
       </div>
+    </div>
+    <div class="npblok text-center">
+      <h2 class="h2pblok">2 ЗАСЕДАНИЕ</h2>
+      <div class="npblok1">
+        2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2  2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ
+      </div>
+    </div>
+    <div class="fpblok text-center">
+      <div class="fpblok1">
+          <img src="./img/main.jpg" class="foto" alt="">
+      </div>
+    </div>
+    <div class="npblok text-center">
+      <h2 class="h2pblok">2 ЗАСЕДАНИЕ</h2>
+      <div class="npblok1">
+        2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2  2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ
+      </div>
+    </div>
+    <div class="fpblok text-center">
+      <div class="fpblok1">
+          <img src="./img/main.jpg" class="foto" alt="">
+      </div>
+    </div>
+    <div class="npblok text-center">
+      <h2 class="h2pblok">2 ЗАСЕДАНИЕ</h2>
+      <div class="npblok1">
+        2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2  2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ
+      </div>
+    </div>
+    <div class="fpblok text-center">
+      <div class="fpblok1">
+          <img src="./img/main.jpg" class="foto" alt="">
+      </div>
+    </div>
+    <div class="npblok text-center">
+      <h2 class="h2pblok">2 ЗАСЕДАНИЕ</h2>
+      <div class="npblok1">
+        2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2  2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ
+      </div>
+    </div>
+    <div class="fpblok text-center">
+      <div class="fpblok1">
+          <img src="./img/main.jpg" class="foto" alt="">
+      </div>
+    </div>
+    <div class="npblok text-center">
+      <h2 class="h2pblok">2 ЗАСЕДАНИЕ</h2>
+      <div class="npblok1">
+        2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2  2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ2 ЗАСЕДАНИЕ
+      </div>
+    </div>
+  </div>  
 </div>
 <footer>
-  <div class="container">
+  <div class="text-center">
   Молодёжный парламент, 2022г.
   </div>
 </footer>
