--- a/Сontest.html
+++ b/Сontest.html
@@ -28,38 +28,39 @@
   </head>
   <body>
     
-<header>
-  <nav class="navbar navbar-expand-lg navbar-dark Mycolor">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">Молодёжный парламент</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
-          <li class="nav-item">
-            <a class="nav-link active" href="./About.html">О нас</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./Team.html">Состав</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./Projects.html">Проекты</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  href="./Initiatives.html">Инициативы</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  href="./Сontest.html">Конкурс</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  href="./Сontacts.html">Контакты</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark Mycolor fixed-top">
+        <div class="container-fluid ">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
+              <li class="nav-item">
+                <a class="nav-link My" href="./About.html">О нас</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link My" href="./Team.html">Состав</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link My" href="./Projects.html">Проекты</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100 justify-content-end">
+              <li class="nav-item">
+                <a class="nav-link My"  href="./Initiatives.html">Инициативы</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link My"  href="./Сontest.html">Конкурс</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link My"  href="./Сontacts.html">Контакты</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
 
 <main>
   <div class="container">
